[workspace]
members = ["server","sgflt"]

[workspace.package]
edition = "2021"
authors = ["Teshin <1443965173@qq.com>"]
repository = "https://github.com/woshihaoren4/single_filter"
keywords = ["single_filter"]
description = "Duplicate value filtering"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
async-trait = "0.1.74"
anyhow = "1.0.75"
wd_log = "0.2.0"
wd_tools = {version = "0.9.0",features = ["ptr","uid","point-free","sync","time","md5"]}
redis = { version = "0.24.0", features = ["cluster-async","tokio-rustls-comp"] }
tokio = { version = "1.35.0",features = ["full"] }
