[package]
name = "sgflt"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
redis.workspace = true
wd_log.workspace = true
tokio.workspace = true
wd_tools.workspace = true
log = "0.4.20"
#wd_tools = {version = "0.8.13",features = ["ptr","uid","point-free","sync"]}